--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "ES2021",
+    "module": "CommonJS",
     "useDefineForClassFields": false,
+    "esModuleInterop": true,
     "lib": [
-      "ES2022",
+      "ES2021",
       "dom"
     ]
   },
