--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",   
+    "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "firebase": "^9.22.1",
     "jsbarcode": "^3.11.5",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
